code/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> axioma
Rule 1     axioma -> Inicio code Fim
Rule 2     code -> S
Rule 3     code -> code ; S
Rule 4     S -> C
Rule 5     S -> E
Rule 6     S -> A
Rule 7     S -> condicao
Rule 8     condicao -> se E entao c_list senao c_list fim_se
Rule 9     C -> escrever ( e_list ) ;
Rule 10    C -> entrada ( var ) ;
Rule 11    C -> para var de E ate E fazer c_list fim_para
Rule 12    A -> fun var ( args ) { code }
Rule 13    A -> var atribui E ;
Rule 14    A -> var aleatorio ( E ) ;
Rule 15    e_list -> E
Rule 16    e_list -> e_list , E
Rule 17    c_list -> C
Rule 18    c_list -> c_list ; C
Rule 19    N -> nr
Rule 20    N -> E + E ;
Rule 21    N -> E - E ;
Rule 22    N -> E * E ;
Rule 23    N -> E / E ;
Rule 24    N -> E < E ;
Rule 25    N -> E > E ;
Rule 26    N -> cos ( E ) ;
Rule 27    N -> sen ( E ) ;
Rule 28    B -> F
Rule 29    B -> E e E ;
Rule 30    B -> E ou E ;
Rule 31    F -> verdadeiro
Rule 32    F -> falso
Rule 33    F -> nao F
Rule 34    F -> nao var
Rule 35    E -> var
Rule 36    E -> ( E )
Rule 37    E -> B
Rule 38    E -> N
Rule 39    E -> string
Rule 40    E -> chamada_funcao arg_list
Rule 41    E -> chamada_funcao
Rule 42    args -> <empty>
Rule 43    args -> var_list
Rule 44    var_list -> var
Rule 45    var_list -> var_list , var
Rule 46    arg_list -> E
Rule 47    arg_list -> arg_list , E
Rule 48    comment_single -> # comment_body
Rule 49    comment_multi -> # * comment_body * #
Rule 50    comment_body -> STRING
Rule 51    comment_body -> comment_body STRING
Rule 52    C -> comment_single
Rule 53    C -> comment_multi

Terminals, with rules where they appear

#                    : 48 49 49
(                    : 9 10 12 14 26 27 36
)                    : 9 10 12 14 26 27 36
*                    : 22 49 49
+                    : 20
,                    : 16 45 47
-                    : 21
/                    : 23
;                    : 3 9 10 13 14 18 20 21 22 23 24 25 26 27 29 30
<                    : 24
>                    : 25
Fim                  : 1
Inicio               : 1
STRING               : 50 51
aleatorio            : 14
ate                  : 11
atribui              : 13
chamada_funcao       : 40 41
cos                  : 26
de                   : 11
e                    : 29
entao                : 8
entrada              : 10
error                : 
escrever             : 9
falso                : 32
fazer                : 11
fim_para             : 11
fim_se               : 8
fun                  : 12
nao                  : 33 34
nr                   : 19
ou                   : 30
para                 : 11
se                   : 8
sen                  : 27
senao                : 8
string               : 39
var                  : 10 11 12 13 14 34 35 44 45
verdadeiro           : 31
{                    : 12
}                    : 12

Nonterminals, with rules where they appear

A                    : 6
B                    : 37
C                    : 4 17 18
E                    : 5 8 11 11 13 14 15 16 20 20 21 21 22 22 23 23 24 24 25 25 26 27 29 29 30 30 36 46 47
F                    : 28 33
N                    : 38
S                    : 2 3
arg_list             : 40 47
args                 : 12
axioma               : 0
c_list               : 8 8 11 18
code                 : 1 3 12
comment_body         : 48 49 51
comment_multi        : 53
comment_single       : 52
condicao             : 7
e_list               : 9 16
var_list             : 43 45

Parsing method: LALR

state 0

    (0) S' -> . axioma
    (1) axioma -> . Inicio code Fim

    Inicio          shift and go to state 2

    axioma                         shift and go to state 1

state 1

    (0) S' -> axioma .



state 2

    (1) axioma -> Inicio . code Fim
    (2) code -> . S
    (3) code -> . code ; S
    (4) S -> . C
    (5) S -> . E
    (6) S -> . A
    (7) S -> . condicao
    (9) C -> . escrever ( e_list ) ;
    (10) C -> . entrada ( var ) ;
    (11) C -> . para var de E ate E fazer c_list fim_para
    (52) C -> . comment_single
    (53) C -> . comment_multi
    (35) E -> . var
    (36) E -> . ( E )
    (37) E -> . B
    (38) E -> . N
    (39) E -> . string
    (40) E -> . chamada_funcao arg_list
    (41) E -> . chamada_funcao
    (12) A -> . fun var ( args ) { code }
    (13) A -> . var atribui E ;
    (14) A -> . var aleatorio ( E ) ;
    (8) condicao -> . se E entao c_list senao c_list fim_se
    (48) comment_single -> . # comment_body
    (49) comment_multi -> . # * comment_body * #
    (28) B -> . F
    (29) B -> . E e E ;
    (30) B -> . E ou E ;
    (19) N -> . nr
    (20) N -> . E + E ;
    (21) N -> . E - E ;
    (22) N -> . E * E ;
    (23) N -> . E / E ;
    (24) N -> . E < E ;
    (25) N -> . E > E ;
    (26) N -> . cos ( E ) ;
    (27) N -> . sen ( E ) ;
    (31) F -> . verdadeiro
    (32) F -> . falso
    (33) F -> . nao F
    (34) F -> . nao var

    escrever        shift and go to state 9
    entrada         shift and go to state 11
    para            shift and go to state 13
    var             shift and go to state 12
    (               shift and go to state 10
    string          shift and go to state 18
    chamada_funcao  shift and go to state 19
    fun             shift and go to state 20
    se              shift and go to state 21
    #               shift and go to state 22
    nr              shift and go to state 24
    cos             shift and go to state 25
    sen             shift and go to state 26
    verdadeiro      shift and go to state 27
    falso           shift and go to state 28
    nao             shift and go to state 29

    code                           shift and go to state 3
    S                              shift and go to state 4
    C                              shift and go to state 5
    E                              shift and go to state 6
    A                              shift and go to state 7
    condicao                       shift and go to state 8
    comment_single                 shift and go to state 14
    comment_multi                  shift and go to state 15
    B                              shift and go to state 16
    N                              shift and go to state 17
    F                              shift and go to state 23

state 3

    (1) axioma -> Inicio code . Fim
    (3) code -> code . ; S

    Fim             shift and go to state 30
    ;               shift and go to state 31


state 4

    (2) code -> S .

    Fim             reduce using rule 2 (code -> S .)
    ;               reduce using rule 2 (code -> S .)
    }               reduce using rule 2 (code -> S .)


state 5

    (4) S -> C .

    Fim             reduce using rule 4 (S -> C .)
    ;               reduce using rule 4 (S -> C .)
    }               reduce using rule 4 (S -> C .)


state 6

    (5) S -> E .
    (29) B -> E . e E ;
    (30) B -> E . ou E ;
    (20) N -> E . + E ;
    (21) N -> E . - E ;
    (22) N -> E . * E ;
    (23) N -> E . / E ;
    (24) N -> E . < E ;
    (25) N -> E . > E ;

    Fim             reduce using rule 5 (S -> E .)
    ;               reduce using rule 5 (S -> E .)
    }               reduce using rule 5 (S -> E .)
    e               shift and go to state 32
    ou              shift and go to state 33
    +               shift and go to state 34
    -               shift and go to state 35
    *               shift and go to state 36
    /               shift and go to state 37
    <               shift and go to state 38
    >               shift and go to state 39


state 7

    (6) S -> A .

    Fim             reduce using rule 6 (S -> A .)
    ;               reduce using rule 6 (S -> A .)
    }               reduce using rule 6 (S -> A .)


state 8

    (7) S -> condicao .

    Fim             reduce using rule 7 (S -> condicao .)
    ;               reduce using rule 7 (S -> condicao .)
    }               reduce using rule 7 (S -> condicao .)


state 9

    (9) C -> escrever . ( e_list ) ;

    (               shift and go to state 40


state 10

    (36) E -> ( . E )
    (35) E -> . var
    (36) E -> . ( E )
    (37) E -> . B
    (38) E -> . N
    (39) E -> . string
    (40) E -> . chamada_funcao arg_list
    (41) E -> . chamada_funcao
    (28) B -> . F
    (29) B -> . E e E ;
    (30) B -> . E ou E ;
    (19) N -> . nr
    (20) N -> . E + E ;
    (21) N -> . E - E ;
    (22) N -> . E * E ;
    (23) N -> . E / E ;
    (24) N -> . E < E ;
    (25) N -> . E > E ;
    (26) N -> . cos ( E ) ;
    (27) N -> . sen ( E ) ;
    (31) F -> . verdadeiro
    (32) F -> . falso
    (33) F -> . nao F
    (34) F -> . nao var

    var             shift and go to state 42
    (               shift and go to state 10
    string          shift and go to state 18
    chamada_funcao  shift and go to state 19
    nr              shift and go to state 24
    cos             shift and go to state 25
    sen             shift and go to state 26
    verdadeiro      shift and go to state 27
    falso           shift and go to state 28
    nao             shift and go to state 29

    E                              shift and go to state 41
    B                              shift and go to state 16
    N                              shift and go to state 17
    F                              shift and go to state 23

state 11

    (10) C -> entrada . ( var ) ;

    (               shift and go to state 43


state 12

    (35) E -> var .
    (13) A -> var . atribui E ;
    (14) A -> var . aleatorio ( E ) ;

    e               reduce using rule 35 (E -> var .)
    ou              reduce using rule 35 (E -> var .)
    +               reduce using rule 35 (E -> var .)
    -               reduce using rule 35 (E -> var .)
    *               reduce using rule 35 (E -> var .)
    /               reduce using rule 35 (E -> var .)
    <               reduce using rule 35 (E -> var .)
    >               reduce using rule 35 (E -> var .)
    Fim             reduce using rule 35 (E -> var .)
    ;               reduce using rule 35 (E -> var .)
    }               reduce using rule 35 (E -> var .)
    atribui         shift and go to state 44
    aleatorio       shift and go to state 45


state 13

    (11) C -> para . var de E ate E fazer c_list fim_para

    var             shift and go to state 46


state 14

    (52) C -> comment_single .

    Fim             reduce using rule 52 (C -> comment_single .)
    ;               reduce using rule 52 (C -> comment_single .)
    }               reduce using rule 52 (C -> comment_single .)
    senao           reduce using rule 52 (C -> comment_single .)
    fim_se          reduce using rule 52 (C -> comment_single .)
    fim_para        reduce using rule 52 (C -> comment_single .)


state 15

    (53) C -> comment_multi .

    Fim             reduce using rule 53 (C -> comment_multi .)
    ;               reduce using rule 53 (C -> comment_multi .)
    }               reduce using rule 53 (C -> comment_multi .)
    senao           reduce using rule 53 (C -> comment_multi .)
    fim_se          reduce using rule 53 (C -> comment_multi .)
    fim_para        reduce using rule 53 (C -> comment_multi .)


state 16

    (37) E -> B .

    e               reduce using rule 37 (E -> B .)
    ou              reduce using rule 37 (E -> B .)
    +               reduce using rule 37 (E -> B .)
    -               reduce using rule 37 (E -> B .)
    *               reduce using rule 37 (E -> B .)
    /               reduce using rule 37 (E -> B .)
    <               reduce using rule 37 (E -> B .)
    >               reduce using rule 37 (E -> B .)
    Fim             reduce using rule 37 (E -> B .)
    ;               reduce using rule 37 (E -> B .)
    )               reduce using rule 37 (E -> B .)
    ,               reduce using rule 37 (E -> B .)
    entao           reduce using rule 37 (E -> B .)
    }               reduce using rule 37 (E -> B .)
    ate             reduce using rule 37 (E -> B .)
    fazer           reduce using rule 37 (E -> B .)


state 17

    (38) E -> N .

    e               reduce using rule 38 (E -> N .)
    ou              reduce using rule 38 (E -> N .)
    +               reduce using rule 38 (E -> N .)
    -               reduce using rule 38 (E -> N .)
    *               reduce using rule 38 (E -> N .)
    /               reduce using rule 38 (E -> N .)
    <               reduce using rule 38 (E -> N .)
    >               reduce using rule 38 (E -> N .)
    Fim             reduce using rule 38 (E -> N .)
    ;               reduce using rule 38 (E -> N .)
    )               reduce using rule 38 (E -> N .)
    ,               reduce using rule 38 (E -> N .)
    entao           reduce using rule 38 (E -> N .)
    }               reduce using rule 38 (E -> N .)
    ate             reduce using rule 38 (E -> N .)
    fazer           reduce using rule 38 (E -> N .)


state 18

    (39) E -> string .

    e               reduce using rule 39 (E -> string .)
    ou              reduce using rule 39 (E -> string .)
    +               reduce using rule 39 (E -> string .)
    -               reduce using rule 39 (E -> string .)
    *               reduce using rule 39 (E -> string .)
    /               reduce using rule 39 (E -> string .)
    <               reduce using rule 39 (E -> string .)
    >               reduce using rule 39 (E -> string .)
    Fim             reduce using rule 39 (E -> string .)
    ;               reduce using rule 39 (E -> string .)
    )               reduce using rule 39 (E -> string .)
    ,               reduce using rule 39 (E -> string .)
    entao           reduce using rule 39 (E -> string .)
    }               reduce using rule 39 (E -> string .)
    ate             reduce using rule 39 (E -> string .)
    fazer           reduce using rule 39 (E -> string .)


state 19

    (40) E -> chamada_funcao . arg_list
    (41) E -> chamada_funcao .
    (46) arg_list -> . E
    (47) arg_list -> . arg_list , E
    (35) E -> . var
    (36) E -> . ( E )
    (37) E -> . B
    (38) E -> . N
    (39) E -> . string
    (40) E -> . chamada_funcao arg_list
    (41) E -> . chamada_funcao
    (28) B -> . F
    (29) B -> . E e E ;
    (30) B -> . E ou E ;
    (19) N -> . nr
    (20) N -> . E + E ;
    (21) N -> . E - E ;
    (22) N -> . E * E ;
    (23) N -> . E / E ;
    (24) N -> . E < E ;
    (25) N -> . E > E ;
    (26) N -> . cos ( E ) ;
    (27) N -> . sen ( E ) ;
    (31) F -> . verdadeiro
    (32) F -> . falso
    (33) F -> . nao F
    (34) F -> . nao var

    e               reduce using rule 41 (E -> chamada_funcao .)
    ou              reduce using rule 41 (E -> chamada_funcao .)
    +               reduce using rule 41 (E -> chamada_funcao .)
    -               reduce using rule 41 (E -> chamada_funcao .)
    *               reduce using rule 41 (E -> chamada_funcao .)
    /               reduce using rule 41 (E -> chamada_funcao .)
    <               reduce using rule 41 (E -> chamada_funcao .)
    >               reduce using rule 41 (E -> chamada_funcao .)
    Fim             reduce using rule 41 (E -> chamada_funcao .)
    ;               reduce using rule 41 (E -> chamada_funcao .)
    )               reduce using rule 41 (E -> chamada_funcao .)
    ,               reduce using rule 41 (E -> chamada_funcao .)
    entao           reduce using rule 41 (E -> chamada_funcao .)
    }               reduce using rule 41 (E -> chamada_funcao .)
    ate             reduce using rule 41 (E -> chamada_funcao .)
    fazer           reduce using rule 41 (E -> chamada_funcao .)
    var             shift and go to state 42
    (               shift and go to state 10
    string          shift and go to state 18
    chamada_funcao  shift and go to state 19
    nr              shift and go to state 24
    cos             shift and go to state 25
    sen             shift and go to state 26
    verdadeiro      shift and go to state 27
    falso           shift and go to state 28
    nao             shift and go to state 29

    arg_list                       shift and go to state 47
    E                              shift and go to state 48
    B                              shift and go to state 16
    N                              shift and go to state 17
    F                              shift and go to state 23

state 20

    (12) A -> fun . var ( args ) { code }

    var             shift and go to state 49


state 21

    (8) condicao -> se . E entao c_list senao c_list fim_se
    (35) E -> . var
    (36) E -> . ( E )
    (37) E -> . B
    (38) E -> . N
    (39) E -> . string
    (40) E -> . chamada_funcao arg_list
    (41) E -> . chamada_funcao
    (28) B -> . F
    (29) B -> . E e E ;
    (30) B -> . E ou E ;
    (19) N -> . nr
    (20) N -> . E + E ;
    (21) N -> . E - E ;
    (22) N -> . E * E ;
    (23) N -> . E / E ;
    (24) N -> . E < E ;
    (25) N -> . E > E ;
    (26) N -> . cos ( E ) ;
    (27) N -> . sen ( E ) ;
    (31) F -> . verdadeiro
    (32) F -> . falso
    (33) F -> . nao F
    (34) F -> . nao var

    var             shift and go to state 42
    (               shift and go to state 10
    string          shift and go to state 18
    chamada_funcao  shift and go to state 19
    nr              shift and go to state 24
    cos             shift and go to state 25
    sen             shift and go to state 26
    verdadeiro      shift and go to state 27
    falso           shift and go to state 28
    nao             shift and go to state 29

    E                              shift and go to state 50
    B                              shift and go to state 16
    N                              shift and go to state 17
    F                              shift and go to state 23

state 22

    (48) comment_single -> # . comment_body
    (49) comment_multi -> # . * comment_body * #
    (50) comment_body -> . STRING
    (51) comment_body -> . comment_body STRING

    *               shift and go to state 52
    STRING          shift and go to state 53

    comment_body                   shift and go to state 51

state 23

    (28) B -> F .

    e               reduce using rule 28 (B -> F .)
    ou              reduce using rule 28 (B -> F .)
    +               reduce using rule 28 (B -> F .)
    -               reduce using rule 28 (B -> F .)
    *               reduce using rule 28 (B -> F .)
    /               reduce using rule 28 (B -> F .)
    <               reduce using rule 28 (B -> F .)
    >               reduce using rule 28 (B -> F .)
    Fim             reduce using rule 28 (B -> F .)
    ;               reduce using rule 28 (B -> F .)
    )               reduce using rule 28 (B -> F .)
    ,               reduce using rule 28 (B -> F .)
    entao           reduce using rule 28 (B -> F .)
    }               reduce using rule 28 (B -> F .)
    ate             reduce using rule 28 (B -> F .)
    fazer           reduce using rule 28 (B -> F .)


state 24

    (19) N -> nr .

    e               reduce using rule 19 (N -> nr .)
    ou              reduce using rule 19 (N -> nr .)
    +               reduce using rule 19 (N -> nr .)
    -               reduce using rule 19 (N -> nr .)
    *               reduce using rule 19 (N -> nr .)
    /               reduce using rule 19 (N -> nr .)
    <               reduce using rule 19 (N -> nr .)
    >               reduce using rule 19 (N -> nr .)
    Fim             reduce using rule 19 (N -> nr .)
    ;               reduce using rule 19 (N -> nr .)
    )               reduce using rule 19 (N -> nr .)
    ,               reduce using rule 19 (N -> nr .)
    entao           reduce using rule 19 (N -> nr .)
    }               reduce using rule 19 (N -> nr .)
    ate             reduce using rule 19 (N -> nr .)
    fazer           reduce using rule 19 (N -> nr .)


state 25

    (26) N -> cos . ( E ) ;

    (               shift and go to state 54


state 26

    (27) N -> sen . ( E ) ;

    (               shift and go to state 55


state 27

    (31) F -> verdadeiro .

    e               reduce using rule 31 (F -> verdadeiro .)
    ou              reduce using rule 31 (F -> verdadeiro .)
    +               reduce using rule 31 (F -> verdadeiro .)
    -               reduce using rule 31 (F -> verdadeiro .)
    *               reduce using rule 31 (F -> verdadeiro .)
    /               reduce using rule 31 (F -> verdadeiro .)
    <               reduce using rule 31 (F -> verdadeiro .)
    >               reduce using rule 31 (F -> verdadeiro .)
    Fim             reduce using rule 31 (F -> verdadeiro .)
    ;               reduce using rule 31 (F -> verdadeiro .)
    )               reduce using rule 31 (F -> verdadeiro .)
    ,               reduce using rule 31 (F -> verdadeiro .)
    entao           reduce using rule 31 (F -> verdadeiro .)
    }               reduce using rule 31 (F -> verdadeiro .)
    ate             reduce using rule 31 (F -> verdadeiro .)
    fazer           reduce using rule 31 (F -> verdadeiro .)


state 28

    (32) F -> falso .

    e               reduce using rule 32 (F -> falso .)
    ou              reduce using rule 32 (F -> falso .)
    +               reduce using rule 32 (F -> falso .)
    -               reduce using rule 32 (F -> falso .)
    *               reduce using rule 32 (F -> falso .)
    /               reduce using rule 32 (F -> falso .)
    <               reduce using rule 32 (F -> falso .)
    >               reduce using rule 32 (F -> falso .)
    Fim             reduce using rule 32 (F -> falso .)
    ;               reduce using rule 32 (F -> falso .)
    )               reduce using rule 32 (F -> falso .)
    ,               reduce using rule 32 (F -> falso .)
    entao           reduce using rule 32 (F -> falso .)
    }               reduce using rule 32 (F -> falso .)
    ate             reduce using rule 32 (F -> falso .)
    fazer           reduce using rule 32 (F -> falso .)


state 29

    (33) F -> nao . F
    (34) F -> nao . var
    (31) F -> . verdadeiro
    (32) F -> . falso
    (33) F -> . nao F
    (34) F -> . nao var

    var             shift and go to state 57
    verdadeiro      shift and go to state 27
    falso           shift and go to state 28
    nao             shift and go to state 29

    F                              shift and go to state 56

state 30

    (1) axioma -> Inicio code Fim .

    $end            reduce using rule 1 (axioma -> Inicio code Fim .)


state 31

    (3) code -> code ; . S
    (4) S -> . C
    (5) S -> . E
    (6) S -> . A
    (7) S -> . condicao
    (9) C -> . escrever ( e_list ) ;
    (10) C -> . entrada ( var ) ;
    (11) C -> . para var de E ate E fazer c_list fim_para
    (52) C -> . comment_single
    (53) C -> . comment_multi
    (35) E -> . var
    (36) E -> . ( E )
    (37) E -> . B
    (38) E -> . N
    (39) E -> . string
    (40) E -> . chamada_funcao arg_list
    (41) E -> . chamada_funcao
    (12) A -> . fun var ( args ) { code }
    (13) A -> . var atribui E ;
    (14) A -> . var aleatorio ( E ) ;
    (8) condicao -> . se E entao c_list senao c_list fim_se
    (48) comment_single -> . # comment_body
    (49) comment_multi -> . # * comment_body * #
    (28) B -> . F
    (29) B -> . E e E ;
    (30) B -> . E ou E ;
    (19) N -> . nr
    (20) N -> . E + E ;
    (21) N -> . E - E ;
    (22) N -> . E * E ;
    (23) N -> . E / E ;
    (24) N -> . E < E ;
    (25) N -> . E > E ;
    (26) N -> . cos ( E ) ;
    (27) N -> . sen ( E ) ;
    (31) F -> . verdadeiro
    (32) F -> . falso
    (33) F -> . nao F
    (34) F -> . nao var

    escrever        shift and go to state 9
    entrada         shift and go to state 11
    para            shift and go to state 13
    var             shift and go to state 12
    (               shift and go to state 10
    string          shift and go to state 18
    chamada_funcao  shift and go to state 19
    fun             shift and go to state 20
    se              shift and go to state 21
    #               shift and go to state 22
    nr              shift and go to state 24
    cos             shift and go to state 25
    sen             shift and go to state 26
    verdadeiro      shift and go to state 27
    falso           shift and go to state 28
    nao             shift and go to state 29

    S                              shift and go to state 58
    C                              shift and go to state 5
    E                              shift and go to state 6
    A                              shift and go to state 7
    condicao                       shift and go to state 8
    comment_single                 shift and go to state 14
    comment_multi                  shift and go to state 15
    B                              shift and go to state 16
    N                              shift and go to state 17
    F                              shift and go to state 23

state 32

    (29) B -> E e . E ;
    (35) E -> . var
    (36) E -> . ( E )
    (37) E -> . B
    (38) E -> . N
    (39) E -> . string
    (40) E -> . chamada_funcao arg_list
    (41) E -> . chamada_funcao
    (28) B -> . F
    (29) B -> . E e E ;
    (30) B -> . E ou E ;
    (19) N -> . nr
    (20) N -> . E + E ;
    (21) N -> . E - E ;
    (22) N -> . E * E ;
    (23) N -> . E / E ;
    (24) N -> . E < E ;
    (25) N -> . E > E ;
    (26) N -> . cos ( E ) ;
    (27) N -> . sen ( E ) ;
    (31) F -> . verdadeiro
    (32) F -> . falso
    (33) F -> . nao F
    (34) F -> . nao var

    var             shift and go to state 42
    (               shift and go to state 10
    string          shift and go to state 18
    chamada_funcao  shift and go to state 19
    nr              shift and go to state 24
    cos             shift and go to state 25
    sen             shift and go to state 26
    verdadeiro      shift and go to state 27
    falso           shift and go to state 28
    nao             shift and go to state 29

    E                              shift and go to state 59
    B                              shift and go to state 16
    N                              shift and go to state 17
    F                              shift and go to state 23

state 33

    (30) B -> E ou . E ;
    (35) E -> . var
    (36) E -> . ( E )
    (37) E -> . B
    (38) E -> . N
    (39) E -> . string
    (40) E -> . chamada_funcao arg_list
    (41) E -> . chamada_funcao
    (28) B -> . F
    (29) B -> . E e E ;
    (30) B -> . E ou E ;
    (19) N -> . nr
    (20) N -> . E + E ;
    (21) N -> . E - E ;
    (22) N -> . E * E ;
    (23) N -> . E / E ;
    (24) N -> . E < E ;
    (25) N -> . E > E ;
    (26) N -> . cos ( E ) ;
    (27) N -> . sen ( E ) ;
    (31) F -> . verdadeiro
    (32) F -> . falso
    (33) F -> . nao F
    (34) F -> . nao var

    var             shift and go to state 42
    (               shift and go to state 10
    string          shift and go to state 18
    chamada_funcao  shift and go to state 19
    nr              shift and go to state 24
    cos             shift and go to state 25
    sen             shift and go to state 26
    verdadeiro      shift and go to state 27
    falso           shift and go to state 28
    nao             shift and go to state 29

    E                              shift and go to state 60
    B                              shift and go to state 16
    N                              shift and go to state 17
    F                              shift and go to state 23

state 34

    (20) N -> E + . E ;
    (35) E -> . var
    (36) E -> . ( E )
    (37) E -> . B
    (38) E -> . N
    (39) E -> . string
    (40) E -> . chamada_funcao arg_list
    (41) E -> . chamada_funcao
    (28) B -> . F
    (29) B -> . E e E ;
    (30) B -> . E ou E ;
    (19) N -> . nr
    (20) N -> . E + E ;
    (21) N -> . E - E ;
    (22) N -> . E * E ;
    (23) N -> . E / E ;
    (24) N -> . E < E ;
    (25) N -> . E > E ;
    (26) N -> . cos ( E ) ;
    (27) N -> . sen ( E ) ;
    (31) F -> . verdadeiro
    (32) F -> . falso
    (33) F -> . nao F
    (34) F -> . nao var

    var             shift and go to state 42
    (               shift and go to state 10
    string          shift and go to state 18
    chamada_funcao  shift and go to state 19
    nr              shift and go to state 24
    cos             shift and go to state 25
    sen             shift and go to state 26
    verdadeiro      shift and go to state 27
    falso           shift and go to state 28
    nao             shift and go to state 29

    E                              shift and go to state 61
    B                              shift and go to state 16
    N                              shift and go to state 17
    F                              shift and go to state 23

state 35

    (21) N -> E - . E ;
    (35) E -> . var
    (36) E -> . ( E )
    (37) E -> . B
    (38) E -> . N
    (39) E -> . string
    (40) E -> . chamada_funcao arg_list
    (41) E -> . chamada_funcao
    (28) B -> . F
    (29) B -> . E e E ;
    (30) B -> . E ou E ;
    (19) N -> . nr
    (20) N -> . E + E ;
    (21) N -> . E - E ;
    (22) N -> . E * E ;
    (23) N -> . E / E ;
    (24) N -> . E < E ;
    (25) N -> . E > E ;
    (26) N -> . cos ( E ) ;
    (27) N -> . sen ( E ) ;
    (31) F -> . verdadeiro
    (32) F -> . falso
    (33) F -> . nao F
    (34) F -> . nao var

    var             shift and go to state 42
    (               shift and go to state 10
    string          shift and go to state 18
    chamada_funcao  shift and go to state 19
    nr              shift and go to state 24
    cos             shift and go to state 25
    sen             shift and go to state 26
    verdadeiro      shift and go to state 27
    falso           shift and go to state 28
    nao             shift and go to state 29

    E                              shift and go to state 62
    B                              shift and go to state 16
    N                              shift and go to state 17
    F                              shift and go to state 23

state 36
